fix: 修改scrollbar单位

--- a/less/common/base/reset.less
+++ b/less/common/base/reset.less
@@ -41,14 +41,14 @@ a {
 ::-webkit-scrollbar-track {
   width: 5px;
   background: rgba(16, 31, 28, 0.1);
-  border-radius: 2em;
+  border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: rgba(16, 31, 28, 0.5);
   background-clip: padding-box;
   min-height: 28px;
-  border-radius: 2em;
+  border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
